# galley

./: .env.example  .gitignore  LICENSE  README.md  STATUS.md  package.json  pnpm-lock.yaml  turbo.json
apps/api/: README.md  package.json  tsconfig.json
apps/desktop/: .gitignore  README.md  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: README.md  icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  oauth.rs  probes.rs  services.rs  tray.rs
apps/mcp/: README.md  pyproject.toml
apps/mcp/src/galley_mcp/: __init__.py  __main__.py  server.py  tools.py
apps/mcp/tests/: test_tools.py
apps/menubar/: README.md  package.json
apps/web/: .env.example  SMOKE-TEST.md  components.json  index.html  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
docs/: AUDIO-EDITOR-SPEC.md  INSTALL.md
docs/architecture/: galley-as-sunfish-accelerator.md  galley-platform-spec.md  galley-production-graph.md  plugin-architecture.md
docs/services/: README.md
docs/settings/: ia.md
docs/upstream-prs/: security-guidance-substring-matching.md
fixtures/sample-book/: README.md  manifest.json
integrations/: library.json
integrations/the-inverted-stack/: README.md  (+2 more)
prose/: CHANGELOG.md  README.md  ROADMAP.md
prose/apps/cli/: README.md  pyproject.toml
prose/apps/cli/src/prose_cli/: __init__.py  main.py
prose/lib/prose_telemetry/: pyproject.toml
prose/lib/prose_telemetry/src/prose_telemetry/: __init__.py  cli.py  dispatch.py  init.py  markdown_ast.py  spacy_detectors.py  verdict.py
prose/lib/prose_telemetry/src/prose_telemetry/_common/: __init__.py  registry.py  text.py  types.py
prose/lib/prose_telemetry/src/prose_telemetry/aggregates/: __init__.py  readability.py  rhythm.py
prose/lib/prose_telemetry/src/prose_telemetry/detectors/: __init__.py
prose/lib/prose_telemetry/src/prose_telemetry/detectors/anti_ai_lexical/: __init__.py  ai_vocab_cluster.yaml  collaborative_artifact.yaml  copula_avoidance.yaml  generic_positive_conclusion.yaml  knowledge_cutoff_disclaimer.yaml  lookup.py  persuasive_authority_trope.yaml  significance_puffery.yaml  signposting.yaml  travel_brochure.yaml  vague_attribution.yaml
prose/lib/prose_telemetry/src/prose_telemetry/detectors/anti_ai_structural/: __init__.py  false_ranges.py  fragmented_headers.py  ing_tail_phrases.py  inline_header_bullets.py  rule_of_three_overuse.py  title_case_headings.py
prose/lib/prose_telemetry/src/prose_telemetry/detectors/chain/: __init__.py  bigram_chain.py  lexical_chain.py  trigram_chain.py
prose/lib/prose_telemetry/src/prose_telemetry/detectors/classical_rhetoric/: __init__.py  anaphora.py  asyndeton.py  literal_tricolon.py  polysyndeton.py
prose/lib/prose_telemetry/src/prose_telemetry/detectors/density_style/: __init__.py  abstract_nouns.py  adverbs.py  cliche.py  fragment_density.py  modal_density.py  paragraph_length_anomaly.py  parenthetical_density.py  redundant_phrases.py  said_overuse.py  vague_quantifiers.py
prose/lib/prose_telemetry/src/prose_telemetry/detectors/devices/: __init__.py  _segment.py  antimetabole.py  climax.py  concession.py  definition_by_negation.py  distinctio.py  epistrophe.py  erotema.py  hypophora.py  litotes.py  prolepsis.py  simile.py  symploce.py
prose/lib/prose_telemetry/src/prose_telemetry/detectors/grammar_mechanics/: __init__.py  comma_splice.py  conjunction_start.py  conjunctive_adverb.py  double_negative.py  expletive_construction.py  gerund.py  infinitive.py  passive_voice.py
prose/lib/prose_telemetry/src/prose_telemetry/detectors/integrations/: __init__.py  proselint_adapter.py
prose/lib/prose_telemetry/src/prose_telemetry/detectors/pivot_inference/: __init__.py  confirmation_tag.py  inference_cascade.py  statement_then_reversal.py  tautology.py
prose/lib/prose_telemetry/src/prose_telemetry/detectors/repetition/: __init__.py  anadiplosis.py  echo_and_confirm.py  epanorthosis.py  internal_anaphora.py  redundant_explicit_predicate.py
prose/lib/prose_telemetry/src/prose_telemetry/detectors/sonics/: __init__.py  alliteration.py  assonance.py  consonance.py  phonemes.py
prose/lib/prose_telemetry/src/prose_telemetry/detectors/spacy/: __init__.py  antithesis.py  distributed_chiasmus.py  isocolon.py  nominalization.py
prose/lib/prose_telemetry/src/prose_telemetry/detectors/structural/: __init__.py  direct_address.py  paragraph_opener_repeat.py  proper_noun.py  proximity_echo.py  temporal_marker.py  timestamp.py
prose/lib/prose_telemetry/src/prose_telemetry/detectors/voice/: __init__.py  filter_words.py  motif_overuse.py  self_referential_frame.py
prose/lib/story_canon/: pyproject.toml
prose/lib/story_canon/src/story_canon/: extractors.py
(+205 files in other folders)
