[package]
name = "galley-desktop"
version = "0.1.0"
description = "Galley desktop shell — tray + supervised services + web UI."
authors = ["Sunfish Software"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "galley_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
once_cell = "1"

# OAuth runtime (Phase 2 — authorization-code-pkce).
oauth2 = { version = "5", default-features = false, features = ["reqwest", "rustls-tls"] }
keyring = "3"
url = "2"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"

[features]
default = []
