[project]
name = "prose-telemetry"
version = "0.2.0"
description = "Prose telemetry — detect literary devices and looping patterns in chapter prose."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "C. T. Wood" }
]
license = { text = "MIT" }
license-files = ["LICENSE"]

dependencies = [
    "spacy >=3.7,<4",
    "pyyaml >=6",
    "textstat >=0.7",
    "markdown-it-py >=3",
    "proselint >=0.13",
    "pronouncing >=0.2",
]

[project.scripts]
prose-telemetry = "prose_telemetry.cli:main"

[project.optional-dependencies]
dev = [
    "pytest >=7",
]

# spaCy model pins. The English-small model is required at runtime;
# install via: python -m spacy download en_core_web_sm
# (URL pin in [tool.uv.sources] keeps it reproducible across machines.)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prose_telemetry"]
