[project]
name = "story-canon"
version = "0.1.0"
description = "Continuity verification for fiction — extract facts from prose, reconcile against a story-canon YAML."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "C. T. Wood" }
]
license = { text = "MIT" }
license-files = ["LICENSE"]

dependencies = [
    "pyyaml >=6",
]

[project.scripts]
story-canon = "story_canon.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/story_canon"]
